# BuildArena-2.0

./: .env.example  .gitignore  README.md  block_preview.ipynb  mcp.example.json  pyproject.toml
blocks/: block_authoring.toml  block_categories.toml  block_registry.generated.toml  block_roles.toml
blocks/descriptors/: armor_plate_large.py  balloon.py  bomb.py  bomb_holder.py  booster.py  boulder.py  cannon.py  cog_large_unpowered.py  cog_medium_unpowered.py  crossbow.py  drag_block.py  drill.py  flame_ball.py  flamethrower.py  fly_wheel.py  flying_block.py  fuel_cannon.py  fuel_coupler.py  grabber.py  grenade.py  grid_fin.py  half_pipe.py  harpoon.py  hinge.py  large_wheel_unpowered.py  metal_blade.py  metal_jaw.py  nautical_screw.py  paddle.py  piston.py  plow.py  propeller.py  reaction_steering_block.py  rocket.py  rudder.py  sail.py  shrapnel_cannon.py  skate_wheel.py  slider.py  small_propeller.py  (+14 more)
buildarena/: block_authoring.py  build.py  collider_loader.py  components.py  definitions_loader.py  descriptor_loader.py  mcp_server.py  mesh_loader.py  paths.py  utils.py  xml_builder.py
docs/: README.zh-CN.md
scripts/: inject_starting_block_tracker.py  rebuild_from_record.py  setup.ps1  setup.py  setup_macos.sh
